# aion_miner

./: README.md
MiningClient/: CMakeLists.txt  README.md
MiningClient/aionminer/: AvailableSolvers.h  main.cpp  version.h
MiningClient/aionminer/libstratum/: AionStratum.cpp
MiningClient/aionminer/primitives/: block.h
MiningClient/cpu_tromp/: cpu_tromp.cpp  equi.h
MiningClient/cuda_tromp/: CMakeLists.txt
MiningPool/: README.md  package-lock.json  run.sh
MiningPool/libs/: poolWorker.js
MiningPool/local_modules/equihashverify/: LICENSE  README.md  binding.gyp  test.js
MiningPool/local_modules/equihashverify/src/equi/: equi.h  equi210.cpp
MiningPool/local_modules/stratum-pool/lib/: daemon.js  index.js  varDiff.js
MiningPool/pool_configs/: aion.json
aion_reference_miner/: CMakeLists.txt  README.md
aion_reference_miner/aionminer/: MinerFactory.h  main.cpp  version.h
aion_reference_miner/aionminer/libstratum/: AionStratum.cpp  AionStratum.h  StratumClient.cpp  StratumClient.h
aion_reference_miner/aionminer/primitives/: block.h
aion_reference_miner/cpu_tromp/: CMakeLists.txt
aion_referrence_miner/: README.md
aion_referrence_miner/aionminer/: ISolver.h  MinerFactory.cpp  uint256.cpp  uint256.h
aion_referrence_miner/aionminer/libstratum/: AionStratum.h  StratumClient.cpp
aion_referrence_miner/aionminer/primitives/: block.cpp
aion_referrence_miner/cpu_tromp/: cpu_tromp.hpp  equi_miner_210.h
aion_referrence_miner/cuda_tromp/: equi_miner.cu
aion_solo_pool/: .gitignore  README.md  config.json  configure.sh  gulpfile.js  init.js  package-lock.json  package.json  redis.sh  release.sh  run.sh  run_quickstart.sh
aion_solo_pool/coins/: aion.json
aion_solo_pool/libs/: logUtil.js  paymentProcessor.js  profitSwitch.js  stats.js  website.js
aion_solo_pool/local_modules/equihashverify/: binding.gyp  equihashverify.cc  index.js  package.json  test.js
aion_solo_pool/local_modules/equihashverify/src/equi/: blake2b.c  blake2b.h  equi.c  equi210.cpp  equi210.h  equi_z.cpp  equi_z.h
aion_solo_pool/local_modules/node-blake2/: package.json
aion_solo_pool/local_modules/stratum-pool/: package.json
aion_solo_pool/local_modules/stratum-pool/lib/: algos.js  blockTemplate.js  daemon.js  jobManager.js  pool.js  stratum.js  transactions.js  util.js
aion_solo_pool/pool_configs/: aion.json
aion_solo_pool/rpc_res/: getblocktemplate.json
